bug fix: alert message center aligned

--- a/static/uikit/styles/modules/_alert.css
+++ b/static/uikit/styles/modules/_alert.css
@@ -9,7 +9,11 @@
   margin-bottom: 1rem;
   margin-right: 1rem;
 }
-
+.alert-container {
+  display: flex;
+  justify-content: center;
+  padding: 1.5rem 2.5rem;
+}
 .alert,
 .alert > .alert__message {
   background-color: var(--color-main-light);
